# kokkos-hpcg

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: compare_reference.sh
src/: common.hpp  dot.cpp  kokkos_hpcg.hpp  main.cpp  mg.cpp  mg.hpp  options.cpp  output.cpp  problem.cpp  run.cpp  spmv.cpp  spmv.hpp  symgs.cpp  waxpby.cpp
tests/: CMakeLists.txt  test_common.hpp  test_kernels.cpp  test_prolongate_and_add.cpp  test_restrict_injection.cpp  test_spmv.cpp
